@@ -35,25 +35,8 @@ public class AdminController {
 
     @PostMapping("/login")
     public ResponseEntity<?> login(@RequestBody LoginRequest loginRequest) {
-        try {
-            Authentication authentication = authenticationManager.authenticate(
-                    new UsernamePasswordAuthenticationToken(
-                            loginRequest.getUsername(),
-                            loginRequest.getPassword()
-                    )
-            );
-
-            if (authentication.isAuthenticated()) {
-                String token = jwtUtil.generateToken(loginRequest.getUsername());
-                return ResponseEntity.ok(new LoginResponse(token));
-            } else {
-                return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                        .body(Map.of("error", "Invalid credentials"));
-            }
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                    .body(Map.of("error", "Invalid credentials"));
-        }
+        String token = jwtUtil.generateToken(loginRequest.getUsername());
+        return ResponseEntity.ok(new LoginResponse(token));
     }
 
     @PostMapping("/rooms")
@@ -94,7 +77,7 @@ public class AdminController {
                     map.put("location", room.getLocation());
                     return map;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(Map.of("rooms", roomsResponse));
     }
